<resources>
    <string name="app_name">Self-Promo App</string>
    <string name="hint_contact_name">Contact Name</string>
    <string name="hint_contact_number">Contact Number</string>
    <string name="hint_display_name">My Display Name</string>
    <string name="text_junior">Include Junior</string>
    <string name="text_immediate_start">immediate start</string>
    <string name="hint_available_date">Available from date</string>
    <string name="text_preview_message">Preview Message</string>
    <string name="button_text_send_message">Send Message</string>
</resources>